--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "iccwsc-cricket-club",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Indian Community Center Washington Cricket Club - Official Website",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
@@ -29,5 +31,24 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
+  },
+  "keywords": [
+    "cricket",
+    "indian-community",
+    "seattle",
+    "sports-management",
+    "react",
+    "typescript",
+    "tailwind"
+  ],
+  "author": "ICCWSC Development Team",
+  "license": "MIT",
+  "homepage": "https://YOUR_USERNAME.github.io/iccwsc-cricket-club/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/YOUR_USERNAME/iccwsc-cricket-club.git"
+  },
+  "bugs": {
+    "url": "https://github.com/YOUR_USERNAME/iccwsc-cricket-club/issues"
   }
 }
